Bug 1157231 - Optimize calls to own property setters. r=efaust